서버 번호 환경변수에서 가져올 수 있게 수정

--- a/.env.sample
+++ b/.env.sample
@@ -6,3 +6,6 @@ SECRET_KEY=your_ncp_secret_key
 TELEGRAM_BOT_TOKEN=your_telegram_bot_token
 TELEGRAM_CHAT_ID=your_telegram_chat_id
 TELEGRAM_CHAT_TEST_ID=your_telegram_test_chat_id  # Optional: For testing purposes 
+
+# Server Instance List
+SERVER_LIST=[your_server_no1,your_server_no2]  # Example: Replace with your server instance numbers 
